@@ -19,13 +19,13 @@
 **/
 ?>
 <?php
-	require_once ('include/config.inc.php');
-	require_once ('include/reports.inc.php');
+require_once ('include/config.inc.php');
+require_once ('include/reports.inc.php');
 
-	$page['title']	= "S_BAR_REPORTS";
-	$page['file']	= 'report6.php';
-	$page['hist_arg'] = array('period');
-	$page['scripts'] = array('class.calendar.js','effects.js');
+$page['title']	= "S_BAR_REPORTS";
+$page['file']	= 'report6.php';
+$page['hist_arg'] = array('period');
+$page['scripts'] = array('class.calendar.js','effects.js');
 
 include_once('include/page_header.php');
 ?>
